Flat montecarlo bot implemented, further debuging required